--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section class="hero fade-in">
     <img src="profile.jpg" alt="Profile Photo">
     <h3>Hello, I'm Sanjeev Yadav</h3>
-    <p>21 years old, living in Chembur. Skilled in Advanced Excel, SQL, Python, Power BI, AWS Athena, HTML, CSS, Automation, and Macros. Currently learning Python Pandas and NumPy.</p>
+    <p>21 years old, living in Mumbai. Skilled in Advanced Excel, SQL, Python, Power BI, AWS Athena, HTML, CSS, Automation, and Macros. Currently learning Python Pandas and NumPy.</p>
     <a href="resume.pdf" class="btn" download>Download Resume</a>
 </section>
 
